--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ services:
 env:
     - GIT_SHA=$(git rev-parse HEAD)
     - CLOUDSDK_CORE_DISABLE_PROMTS=1
-before_install
+before_install:
 #google cloud setup
   - openssl aes-256-cbc -K $encrypted_0c35eebf403c_key -iv $encrypted_0c35eebf403c_iv -in service-account.json.enc -out service-account.json -d
   - curl https://sdk.cloud.google.com | bash > /dev/null;
