--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,10 @@ sudo: required
 services:
   - docker
 env:
+  global:
     - GIT_SHA=$(git rev-parse HEAD)
     - CLOUDSDK_CORE_DISABLE_PROMPTS=1
+
 before_install:
 #google cloud setup
   - openssl aes-256-cbc -K $encrypted_0c35eebf403c_key -iv $encrypted_0c35eebf403c_iv -in service-account.json.enc -out service-account.json -d
